update Product module